<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">School</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="agenda">Agenda</string>
    <string name="homework">Homework</string>
    <string name="homeworks">Homeworks</string>
    <string name="exam">Exam</string>
    <string name="exams">Exams</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="pick_subject">Pick Subject</string>
    <string name="date">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="subtasks">Subtasks</string>
    <string name="add">Add</string>
    <string name="notes">Notes</string>
    <string name="new_exam">New Exam</string>
    <string name="new_task">New Task</string>
    <string name="new_homework">New Homework</string>
    <string name="enter_note_here">Enter Note Here</string>
    <string name="show_more">Show More</string>
    <string name="settings">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="show_all_details">Show All Details</string>
    <string name="overview">Overview</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_subtask">Enter Subtask</string>
    <string name="edit">Edit</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="see_what_s_for_tomorrow">See what\'s for tomorrow?</string>
    <string name="overdue">Overdue</string>
    <string name="you_don_t_have_anything_scheduled_for_today">You don\'t have anything scheduled for today!</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="all_done">All Done!</string>
    <string name="no_homeworks">No Homeworks</string>
    <string name="no_exams">No Exams</string>
    <string name="no_tasks">No Tasks</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme">Theme</string>
    <string name="profile">Profile</string>
    <string name="preference_file_key">preferences</string>
    <string name="completed">Completed</string>
    <string name="options">Options</string>
    <string name="sort_by">Sort by:</string>
    <string name="group_by_category">Group by category:</string>
    <string name="delete">Delete</string>
    <string name="check">Check</string>
    <string name="uncheck">Uncheck</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="what_do_you_want_us_to_call_you">What do you want us to call you?</string>
    <string name="email">Email</string>
    <string name="no_items_for_this_date">No items for this date.</string>
    <string name="no_completed_items_yet">No completed items yet</string>
    <string name="get_started">Get Started</string>
    <string name="done">Done</string>
    <string name="add_homeworks_exams_and_tasks">Add homeworks, exams, and tasks</string>
    <string name="check_your_calendar">Check your calendar</string>
    <string name="see_your_schedule_for_the_day">See your schedule for the day</string>
    <string name="skip">Skip</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="com_github_antonyt__InfiniteViewPager_library">com_github_antonyt__InfiniteViewPager</string>
    <string name="com_github_kizitonwose__CalendarView_library">com_github_kizitonwose__CalendarView</string>
    <string name="com_github_antonyt__InfiniteViewPager_description">Augment Android\'s ViewPager with wrap-around functionality.</string>
    <string name="com_github_antonyt__InfiniteViewPager_libraryWebsite">https://github.com/antonyt/InfiniteViewPager</string>
    <string name="com_github_kizitonwose__CalendarView_description">A highly customizable calendar library for Android, powered by RecyclerView.</string>
    <string name="com_github_kizitonwose__CalendarView_libraryWebsite">https://github.com/kizitonwose/CalendarView</string>
    <string name="upcoming">Upcoming</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="use_other_method">Use other method</string>
    <string name="new_user_sign_up_now">New user? Sign up now.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="or">or</string>
    <string name="no_account_yet_sign_up">No account yet? Sign up</string>
    <string-array name="sort_by_array">
        <item>Time Completed</item>
        <item>Title</item>
    </string-array>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reset_password">Reset password</string>
    <string name="did_not_receive_email_resend">Did not receive email? Resend.</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="verify_email">Verify email</string>
    <string name="we_hope_we_can_help_you_make_your_school_life_more_productive">We hope we can help you make your school life more productive.</string>
    <string name="a_verification_email_has_been_sent_to">A verification email has been sent to</string>
    <string name="please_check_your_email_to_verify_your_account">Please check your email to verify your account.</string>
    <string name="a_password_reset_email_has_been_sent_to">A password reset email has been sent to</string>
    <string name="backup">Backup</string>
    <string name="create_new_backup">Create new backup</string>
    <string name="backups">Backups</string>
    <string name="no_backups_yet">No backups yet</string>
    <string name="internet_connection_is_required">Internet connection is required!</string>
    <string name="retry">Retry</string>
    <string name="account_required">You need an account to create a backup.</string>
    <string name="backup_message">Select an item from the list to restore.\nPress and hold to delete.</string>
    <string name="do_you_want_to_backup_current_database">Do you want to backup your current database before performing a restore?</string>
    <string name="backup_current_database">Backup current database</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="restart">Restart</string>
    <string name="backup_created_successfully">Backup created successfully</string>
    <string name="restore_successful_restart_app">Restore successful. Restart app.</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_failed">Restore Failed</string>
    <string name="backup_successful">Backup successful</string>
    <string name="restore_successful">Restore successful</string>
    <string name="error_while_performing_backup">An error occurred while performing a backup. Please try again.</string>
    <string name="error_while_performing_restore">An error occurred while performing a restore. Please try again.</string>
    <string name="backup_error_restore_cancelled">An error occurred while creating a backup of the current database. Restore cancelled.</string>
    <string name="error_while_getting_list_of_backups">An error occurred while getting the list of backups. Please try again.</string>
    <string name="no_internet">There is no Internet connection.</string>
    <string name="updates_notification_channel_id">updates_notification_channel_id</string>
    <string name="account_not_verified_message">Your account is not yet verified. Please check your email to verify your account.</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="save">Save</string>
    <string name="are_you_sure_you_want_to_delete_this_backup">Are you sure you want to delete this backup</string>
    <string name="delete_backup">Delete backup?</string>
    <string name="failed_to_delete_backup">Failed to delete backup. Please try again.</string>
    <string name="password_reset_email_sent">Password reset email sent.</string>
    <string name="an_error_occurred">An error occurred. Please try again.</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="version">Version</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="sign_in_failed">Sign in failed. Please try again.</string>
    <string name="user_already_exists">User already exists.</string>
    <string name="password_is_too_weak">Password is too weak.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="sign_up_failed">Sign up failed. Please try again.</string>
    <string name="failed_to_send_verification_email">Failed to send verification email. Please try again later.</string>
    <string name="invalid_email_or_password">Invalid email or password.</string>
    <string name="enter_code_to_confirm_restore">Please enter the code shown below to confirm restore.</string>
    <string name="confirm_restore">Confirm restore</string>
    <string name="code_not_match_restore_cancelled">The code you entered did not match the given code. Restore cancelled.</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="send_password_reset_email_to">Send a password reset email to</string>
    <string name="please_try_again_in">Please try again in</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="failed_to_update">Failed to update.</string>
    <string name="verification_email_sent">Verification email sent.</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="not_set">Not set</string>
    <string name="your_email">your email</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="verify_your_account_to_create_a_backup">Verify your account to create a backup.</string>
    <string name="file_is_too_big_message">Delete some homeworks, exams, or tasks then try again.</string>
    <string name="file_is_too_big">File is too big</string>
    <string name="restore_cancelled">Restore cancelled</string>
    <string name="welcome">Welcome</string>
    <string name="enter_a_valid_input">Please enter a valid input.</string>
    <string name="delete_some_backups">Delete some backups</string>
    <string name="enable_password">Enable password</string>
    <string name="you_will_need_this_password_when_restoring">You will need this password when restoring.</string>
    <string name="enter_password">Enter password</string>
</resources>