<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/buttonShowAllDetails"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all_details"
            app:icon="@drawable/ic_chevron_up"
            app:iconSize="24dp"
            app:iconGravity="end"
            app:iconTint="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHomework"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:chipBackgroundColor="@color/chip_background_state_list"
                android:text="@string/homework"
                android:textAppearance="@style/ChipTextBold"
                android:textAlignment="center"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipExam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:chipBackgroundColor="@color/chip_background_state_list"
                android:text="@string/exam"
                android:textAppearance="@style/ChipTextBold"
                android:textAlignment="center"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:chipBackgroundColor="@color/chip_background_state_list"
                android:text="@string/task"
                android:textAppearance="@style/ChipTextBold"
                android:textAlignment="center"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"/>

        <HorizontalScrollView
            android:id="@+id/scrollViewDateChoices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="24dp"
            android:layout_marginTop="8dp"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                android:id="@+id/chipGroupDate">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPickDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ChipTextRegular"
                    android:text="@string/pick_date"
                    app:chipIcon="@drawable/ic_chip_pick_date"
                    android:textColor="@color/chip_text_color_state_list"
                    app:chipBackgroundColor="@color/chip_background_state_list"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipStrokeColor="@color/chip_stroke_color_state_list"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ChipTextRegular"
                    android:text="@string/today"
                    android:textColor="@color/chip_text_color_state_list"
                    app:chipBackgroundColor="@color/chip_background_state_list"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipStrokeColor="@color/chip_stroke_color_state_list"
                    app:chipIcon="@drawable/ic_chip_today_tomorrow"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ChipTextRegular"
                    android:text="@string/tomorrow"
                    android:textColor="@color/chip_text_color_state_list"
                    app:chipBackgroundColor="@color/chip_background_state_list"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipStrokeColor="@color/chip_stroke_color_state_list"
                    app:chipIcon="@drawable/ic_chip_today_tomorrow"
                    app:chipStrokeWidth="1dp" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:hint="@string/enter_title"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/cabin_regular"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textCapSentences">

                <requestFocus/>

            </EditText>

            <ImageButton
                android:id="@+id/buttonCheck"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_check_inside_circle"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>