<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintStart_toStartOf="@id/editTextEmail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/cabin_bold"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/imageViewLogo"
                app:layout_constraintStart_toEndOf="@id/imageViewLogo"
                app:layout_constraintTop_toTopOf="@id/imageViewLogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin_regular"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin_regular"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonForgotPassword"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:minHeight="0dp"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="@id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

            <Button
                android:id="@+id/buttonSignIn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="@id/editTextPassword"
                app:layout_constraintStart_toStartOf="@id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@id/buttonForgotPassword" />

            <TextView
                android:id="@+id/textViewUseOtherMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cabin_regular"
                android:text="@string/or"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignInWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign_in_with_google"
                app:icon="@drawable/ic_google"
                app:iconTint="@null"
                app:iconSize="40dp"
                app:iconPadding="12dp"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:paddingLeft="0dp"
                app:backgroundTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewUseOtherMethod"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/textViewSignUp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/new_user_sign_up_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonSignInWithGoogle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>